@@ -1,3 +1,3 @@
 <html><body>To select a bracketed code block, <b>Control</b>-click the
-bracket in the text area, or the bracket scope indicator in the gutter.
+bracket scope indicator in the gutter. To narrow the display to a bracketed code block, <b>Alt</b>-click the bracket scope indicator in the gutter.
 </body></html>
