@@ -5,7 +5,8 @@ to find all uses of an instance variable that are outside the current
 method:
 
 <ul>
-<li><b>Control</b>-click on the method's opening bracket to select the entire method.
+<li>Position the caret inside a method and invoke
+<b>Edit</b>&gt;<b>Source</b>&gt;<b>Select Code Block</b>.
 <li>Invoke <b>Edit</b>&gt;<b>Invert Selection</b> (<b>C+e i</b>).
 <li>Invoke <b>Search</b>&gt;<b>Find</b> (<b>C+f</b>).
 <li>Type in the variable name and press <b>Enter</b>.
