@@ -1,5 +1,5 @@
 <html><body>By default, jEdit strips the final end of line character when
 loading a buffer, and re-adds it when saving.
 You can specify that the final end of line be always visible in the
-<b>Loading and Saving</b> pane of the
+<b>General</b> pane of the
 <b>Utilities</b>&gt;<b>Buffer Options</b> dialog box.</body></html>
