@@ -4,9 +4,10 @@ the <b>Text Area</b> pane of the <b>Utilities</b>&gt;<b>Global
 Options</b> dialog box, dragging with the middle mouse button over some text
 inserts that text at the previous caret position.<p>
 
-This feature has three additional, more suttle behaviors:
+This feature has some additional behavior you might not expect:
 
 <ul>
+<li>It can be used to transfer text between edit panes in a split view.
 <li>Holding down <b>Shift</b> while clicking the middle mouse button immediately duplicates all text between the caret position and the clicked location.
 <li>If there already is a selection when you start middle-dragging, the selection
 will be replaced with the region you marked with the mouse.</li>
