@@ -1,6 +1,6 @@
 <html><body>
 
-In jEdit 4.1, the "smart home/end" setting has been removed. Now, the
+In jEdit 4.1, the "smart home/end" setting was removed. Now, the
 behavior of the <b>HOME</b> and <b>END</b> keys can be configured in the <b>Shortcuts</b>
 pane of the <b>Global Options</b> dialog box, just as with any other key. The
 HOME key can be bound to one of the following commands, for example:
